# koku/masu/api/hcs_report_data.py
@@ -3,7 +3,6 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 """View for running_celery_tasks endpoint."""
-import datetime
 import logging
 
 import ciso8601
@@ -20,6 +19,7 @@ from rest_framework.settings import api_settings
 from api.utils import DateHelper
 from hcs.tasks import collect_hcs_report_data
 from hcs.tasks import HCS_QUEUE
+from masu.database.provider_db_accessor import ProviderDBAccessor
 
 # flake8: noqa
 
@@ -31,20 +31,47 @@ LOG = logging.getLogger(__name__)
 @permission_classes((AllowAny,))
 @renderer_classes(tuple(api_settings.DEFAULT_RENDERER_CLASSES))
 def hcs_report_data(request):
+    # TODO: need to add unleash to handle which providers are valid
+    """Generate HCS report data."""
     params = request.query_params
-    start_date = params.get("start_date")
     end_date = params.get("end_date")
+    start_date = params.get("start_date")
+    provider_uuid = params.get("provider_uuid")
+    provider_type = params.get("provider_type")
+    schema = params.get("schema")
+
+    report_data_msg_key = "Report Data Task ID"
+    error_msg_key = "Error"
 
     if start_date is None:
-        errmsg = "start_date is a required parameter."
-        return Response({"Error": errmsg}, status=status.HTTP_400_BAD_REQUEST)
+        return Response({error_msg_key: "start_date is a required parameter"}, status=status.HTTP_400_BAD_REQUEST)
+
+    if schema is None:
+        return Response({error_msg_key: "schema is a required parameter"}, status=status.HTTP_400_BAD_REQUEST)
+
+    if provider_uuid is None and provider_type is None:
+        return Response(
+            {error_msg_key: "provider_uuid or provider_type must be supplied as a parameter"},
+            status=status.HTTP_400_BAD_REQUEST,
+        )
+
+    if provider_uuid:
+        with ProviderDBAccessor(provider_uuid) as provider_accessor:
+            provider = provider_accessor.get_type()
+    else:
+        provider = provider_type
+
+    if provider_type and provider_type != provider:
+        return Response(
+            {error_msg_key: "provider_uuid and provider_type have mismatched provider types"},
+            status=status.HTTP_400_BAD_REQUEST,
+        )
 
     try:
         start_date = ciso8601.parse_datetime(start_date).replace(tzinfo=pytz.UTC)
         end_date = ciso8601.parse_datetime(end_date).replace(tzinfo=pytz.UTC) if end_date else DateHelper().today
     except ValueError as err:
-        LOG.info(f"Invalid date format: {err}")
-        return Response({"Error": f"Invalid date format: {err}"}, status=status.HTTP_400_BAD_REQUEST)
+        return Response({error_msg_key: f"Invalid date format: {err}"}, status=status.HTTP_400_BAD_REQUEST)
 
     months = DateHelper().list_month_tuples(start_date, end_date)
     num_months = len(months)
@@ -60,7 +87,6 @@ def hcs_report_data(request):
         end_date = end.date().strftime("%Y-%m-%d")
         months[i] = (start_date, end_date)
 
-    LOG.info("Calling collect_hcs_report_data async task.")
     async_result = collect_hcs_report_data.s(start_date, end_date).apply_async(queue=HCS_QUEUE)
 
-    return Response({"Report Data Task ID": str(async_result)})
+    return Response({report_data_msg_key: str(async_result)})
